objects/ESC_EPx_DeclineCriteria__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Used by ESC_EPx process to determine if a survey should be suppressed or not</description>
    <fields>
        <fullName>Field_Value__c</fullName>
        <label>Field Value</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Field_Name__c</fullName>
        <label>Object Field Name</label>
        <length>222</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Name__c</fullName>
        <label>Object Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Role__c</fullName>
        <description>The user role that the decline criteria belongs to. If no user role is specified then the decline criteria is treated as global and will apply to all user roles. Please user the API name (developerName) of the user role not the label.</description>
        <inlineHelpText>The user role that the decline criteria belongs to. If no user role is specified then the decline criteria is treated as global and will apply to all user roles. Please user the API name (developerName) of the user role not the label.</inlineHelpText>
        <label>User Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>ESC_EPx_DeclineCriteria</label>
</CustomObject>